Le agregue un footer

--- a/html.html
+++ b/html.html
@@ -11,5 +11,6 @@
     <P>prueba</P>
     <button onclick="Cambiar-color"></button>
   </div>
+  <footer>Este es el footer</footer>
 </body>
 </html>
