--- a/html.html
+++ b/html.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>prueba</title>
+  <title>Quieres</title>
+  <link rel="stylesheet" href="css.css">
 </head>
+
 <body>
-  <h1>prueba</h1>
-  <div>
-    <P>prueba</P>
-    <button onclick="Cambiar-color"></button>
-    <h2>otro commit</h2>
-    <h3>h3</h3>
-    <h4>el ultimo</h4>
+  <!-- <center>
+    <section>
+      <h1>Quieres ser mi waifu?</h1>
+      <section>
+        <button>SI</button>
+      </section>
+      <section>
+        <button>NO</button>
+      </section>
+    </section>
+  </center> -->
+
+  <!-- Forma B -->
+  <div class="total">
+    <section class="general">
+      <div class="container">
+        <h1>Quieres ser mi waifu?</h1>
+      </div>
+
+      <div class="container">
+        <div class="box">
+          <button>Sí</button>
+        </div>
+        <div class="box">
+          <button>No</button>
+        </div>
+      </div>
+    </section>
   </div>
 </body>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>prueba</title>
-</head>
-<body>
-  <h1>prueba</h1>
-  <div>
-    <P>prueba</P>
-    <button onclick="Cambiar-color"></button>
-  </div>
-  <footer>Este es el footer</footer>
-</body>
+
 </html>
