--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div class="box">
           <button>No</button>
         </div>
+        <div class="box">
+          <button>No sé</button>
+        </div>
       </div>
     </section>
   </div>
