se agregó id al botón

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="box">
           <button>No</button>
         </div>
-        <div class="box">
+        <div id="btn" class="box">
           <button>No sé</button>
         </div>
       </div>
